[gd_scene load_steps=7 format=4 uid="uid://4r06mqsja61"]

[ext_resource type="TileSet" uid="uid://b5b65cc2hovvh" path="res://Assets/Sprites/TileSets/LabRoom.tres" id="1_7ssoj"]
[ext_resource type="Script" uid="uid://bb0ws1xbutim5" path="res://Assets/Scripts/Rooms/RoomManager.gd" id="1_a8ymt"]

[sub_resource type="Gradient" id="Gradient_a8ymt"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.987013, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.753247, 0.753247, 0.753247, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_idd53"]
noise_type = 5
seed = 3
frequency = 1.0
fractal_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_710bh"]
seamless = true
seamless_blend_skirt = 1.0
as_normal_map = true
bump_strength = 0.0
color_ramp = SubResource("Gradient_a8ymt")
noise = SubResource("FastNoiseLite_idd53")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_41vem"]
vertices = PackedVector2Array(422.008, 625.039, 203, 625.953, 203, -34, 422.992, -34)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(193, -44, 433, -44, 432, 635, 193, 636)])

[node name="room_corrioor" type="Node2D" groups=["Rooms"]]
script = ExtResource("1_a8ymt")

[node name="TileMap" type="Node2D" parent="."]

[node name="Floor" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAANAA8AAgACABAAAAAZAA8AAgAEABAAAAAQAA8AAgADABAAAAATAA8AAgADABAAAAAWAA8AAgADABAAAAANABIAAgACABEAAAAQABIAAgADABEAAAATABIAAgADABEAAAAWABIAAgADABEAAAAZABIAAgAEABEAAAANABUAAgACABAAAAANABgAAgACABEAAAAQABUAAgADABAAAAAQABgAAgADABEAAAATABUAAgADABAAAAATABgAAgADABEAAAAWABUAAgADABAAAAAWABgAAgADABEAAAAZABUAAgAEABAAAAAZABgAAgAEABEAAAANABsAAgACABAAAAANAB4AAgACABEAAAAQABsAAgADABAAAAAQAB4AAgADABEAAAATABsAAgADABAAAAATAB4AAgADABEAAAAWABsAAgADABAAAAAWAB4AAgADABEAAAAZABsAAgAEABAAAAAZAB4AAgAEABEAAAALAAYAAgACAAAAAAALAAkAAgACAAEAAAAOAAYAAgADAAAAAAAOAAkAAgADAAEAAAARAAYAAgAEAAAAAAARAAkAAgAEAAEAAAAUAAYAAgAFAAAAAAAUAAkAAgAFAAEAAAAXAAYAAgAGAAAAAAAXAAkAAgAGAAEAAAAaAAYAAgAHAAAAAAAaAAkAAgAHAAEAAAANAAwAAgACABEAAAAQAAwAAgADABEAAAATAAwAAgADABEAAAAWAAwAAgADABEAAAAZAAwAAgAEABEAAAANAAsAAgACABAAAAAQAAsAAgADABAAAAATAAsAAgADABAAAAAWAAsAAgADABAAAAAZAAsAAgAEABAAAAALACAAAgACAAAAAAALACMAAgACAAEAAAAOACAAAgADAAAAAAAOACMAAgADAAEAAAARACAAAgAEAAAAAAARACMAAgAEAAEAAAAUACAAAgAFAAAAAAAUACMAAgAFAAEAAAAXACAAAgAGAAAAAAAXACMAAgAGAAEAAAAaACAAAgAHAAAAAAAaACMAAgAHAAEAAAA=")
tile_set = ExtResource("1_7ssoj")

[node name="Ceiling Walls" type="TileMapLayer" parent="TileMap"]
z_index = 3
position = Vector2(1, 0)
tile_map_data = PackedByteArray("AAAKAAQAAwAAAAEAAAAKAAcAAwAAAAEAAAAKAAoAAwAAAAEAAAAKAA0AAwAAAAEAAAAKABAAAwAAAAEAAAAKABMAAwAAAAEAAAAKABYAAwAAAAEAAAAKABkAAwAAAAkAAAANABkAAwABAAkAAAAQABkAAwABAAkAAAATABkAAwABAAkAAAAWABkAAwABAAkAAAAZABkAAwABAAkAAAAcAAQAAwAEAAEAAAAcAAcAAwAEAAEAAAAcAAoAAwAEAAEAAAAcAA0AAwAEAAEAAAAcABAAAwAEAAEAAAAcABMAAwAEAAEAAAAcABYAAwAEAAEAAAAcABkAAwAAAAkAABAKABwAAwAAAAoAAAAKAB8AAwAAAAoAAAAKACIAAwAAAAsAAAAcABwAAwAAAAoAABAcAB8AAwAAAAoAABAcACIAAwAAAAsAABANAAEAAwACAAAAAAAQAAEAAwACAAAAAAATAAEAAwACAAAAAAAWAAEAAwACAAAAAAAZAAEAAwACAAAAAAAcAAEAAwAEAAAAAAAKAAEAAwAEAAAAABA=")
tile_set = ExtResource("1_7ssoj")

[node name="Decoration" type="TileMapLayer" parent="TileMap"]
z_index = 2
tile_set = ExtResource("1_7ssoj")

[node name="RoomLight" type="Node2D" parent="."]

[node name="PointLight2D4" type="PointLight2D" parent="RoomLight"]
position = Vector2(311.842, 214.9)
scale = Vector2(0.473273, 0.676172)
color = Color(0.884577, 0.183887, 0.130483, 1)
energy = 2.4
blend_mode = 2
shadow_color = Color(0.025978, 0.0419082, 0.0372941, 0)
shadow_filter = 1
texture = SubResource("NoiseTexture2D_710bh")

[node name="EnemyDetectionZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnemyDetectionZone"]
position = Vector2(191.392, 0)
scale = Vector2(0.139539, 1)
polygon = PackedVector2Array(40.1868, 567, 1724.31, 572, 1752.97, 39, 11.5209, 40)

[node name="Doors" type="Node2D" parent="."]
z_index = 2

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_41vem")

[connection signal="body_entered" from="EnemyDetectionZone" to="." method="_on_enemy_detection_zone_body_entered"]
[connection signal="body_exited" from="EnemyDetectionZone" to="." method="_on_enemy_detection_zone_body_exited"]
